service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: ai-app
spec:
  type: ClusterIP
  selector:
    app: ai-app
  ports:
  - port: 80
    targetPort: 8081
